namespace Powertech.Platform.Notifications.Domain.Model.Commands;

public record DispatchNotificationCommand(Guid NotificationId);
