namespace Powertech.Platform.Notifications.Domain.Model.Commands;

public record MarkNotificationDeliveredCommand(Guid NotificationId);
