namespace Powertech.Platform.Notifications.Domain.Model.Queries;

public record GetNotificationByIdQuery(Guid NotificationId);
