namespace Powertech.Platform.Notifications.Domain.Model.Queries;

public record GetNotificationsByParentIdQuery(Guid ParentId);
