namespace Powertech.Platform.Notifications.Domain.Model.ValueObjects;

public record NotificationCategory(string Value);
