namespace Powertech.Platform.Notifications.Domain.Model.ValueObjects;

public record NotificationDeliveryState(string Value);
