namespace Powertech.Platform.Notifications.Interfaces.Rest.Resources;

public record TriggerAlertResource(bool Panic);
